# br-archive

./: CMakeLists.txt  LICENSE  README.md  cspell.json
.github/: ci-linux.yml  ci-msys2.yml
.github/workflows/: ci-linux.yml  ci-msys2.yml  ci-publish-doxygen.yml  ci-windows.yml_
doxygen/: CMakeLists.txt  Doxyfile.in
include/: lib_bra.h
src/: BraProgram.cpp  BraProgram.hpp  bra.cpp  bra_fs.cpp  bra_fs.h  bra_fs.hpp  bra_fs_c.cpp  bra_fs_c.h  bra_log.c  bra_log.h  bra_sfx.c  bra_sfx.cpp  bra_tree_dir.c  bra_tree_dir.h  bra_wildcards.cpp  bra_wildcards.hpp  lib_bra.c  lib_bra.h  lib_bra_crc32c.c  lib_bra_crc32c.h  lib_bra_defs.h  lib_bra_io.c  lib_bra_io.h  lib_bra_private.c  lib_bra_private.h  lib_bra_types.h  unbra.cpp  version.h.in
src/encoders/: bra_bwt.c  bra_bwt.h  bra_huffman.c  bra_huffman.h  bra_mtf.c  bra_mtf.h  bra_rle.c  bra_rle.h
src/fs/: bra_fs.cpp  bra_fs.hpp  bra_fs_c.cpp  bra_fs_c.h  bra_wildcards.cpp  bra_wildcards.hpp
src/io/: lib_bra_io_chunk_header.c  lib_bra_io_chunk_header.h  lib_bra_io_file.c  lib_bra_io_file.h  lib_bra_io_file_chunks.c  lib_bra_io_file_chunks.h  lib_bra_io_file_ctx.c  lib_bra_io_file_ctx.h  lib_bra_io_file_meta_entries.c  lib_bra_io_file_meta_entries.h
src/log/: bra_log.c  bra_log.h
src/prog/: BraProgram.cpp  BraProgram.hpp  BraProgramOutputArgTrait.cpp  BraProgramOutputArgTrait.hpp  bra.cpp  bra_sfx.cpp  unbra.cpp
src/utils/: bra_tree_dir.c  lib_bra_crc32c.c  lib_bra_crc32c.h
test/: CMakeLists.txt  bra_test.hpp  test.txt  test_bra.cpp  test_bra_crc32c.cpp  test_bra_encoders.cpp  test_bra_fs.cpp  test_bra_tree_dir.cpp  test_bra_wildcards.cpp  test_lib_bra.cpp
test/fixtures/: lorem.txt
